objects/hed__Trigger_Handler__c.object
<CustomObject><fields>
        <fullName>hed__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates that this module is active</description>
        <inlineHelpText>Indicates that this module is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Asynchronous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this module should be run asynchronously in this transaction</description>
        <inlineHelpText>Indicates that this module should be run asynchronously in this transaction</inlineHelpText>
        <label>Asynchronous</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Class__c</fullName>
        <description>Name of the class to be run</description>
        <inlineHelpText>Name of the class to be run</inlineHelpText>
        <label>Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Filter_Field__c</fullName>
        <description>Name of the field used for filtering.</description>
        <inlineHelpText>Name of the field used for filtering.</inlineHelpText>
        <label>Filter Field</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Filter_Value__c</fullName>
        <description>Value of the field used for filtering.</description>
        <inlineHelpText>Value of the field used for filtering.</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Load_Order__c</fullName>
        <description>Order in which this module should be run, helps maintain dependencies in the modules and data.</description>
        <inlineHelpText>Order in which this module should be run, helps maintain dependencies in the modules and data.</inlineHelpText>
        <label>Load Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>hed__Object__c</fullName>
        <description>Name of the object this handler should be run for</description>
        <inlineHelpText>Name of the object this handler should be run for</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Trigger_Action__c</fullName>
        <description>Trigger Action in which this module should fire</description>
        <inlineHelpText>Trigger Action in which this module should fire</inlineHelpText>
        <label>Trigger Action</label>
        <picklist>
            <picklistValues>
                <fullName>BeforeInsert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BeforeUpdate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BeforeDelete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AfterInsert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AfterUpdate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AfterDelete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AfterUndelete</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>hed__User_Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The record is managed by the user and updates won't be pushed to it.</description>
        <inlineHelpText>Check it if you intent to manage the record yourself. Be aware that updates to the package won't update the record.</inlineHelpText>
        <label>User Managed</label>
        <type>Checkbox</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><deprecated>false</deprecated><description>Stores which classes to run in response to DML performed on an object.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Trigger Handler</label><nameField>
        <label>Trigger Handler Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Trigger Handlers</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><listViews>
        <fullName>hed__All_Main_Fields</fullName>
        <columns>NAME</columns>
        <columns>hed__Class__c</columns>
        <columns>hed__Object__c</columns>
        <columns>hed__Active__c</columns>
        <columns>hed__Load_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All - Main Fields</label>
    </listViews></CustomObject>